<resources>
    <string name="app_name">Driver_1</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="usernameString">John Smith</string>
    <string name="sponsorString">Example</string>
    <string name="pointString">100</string>
    <string name="resetPasswordString">Reset Password</string>
    <string name="birthdayString">January 1, 2000</string>
    <string name="genderString">Male</string>
    <string name="emailString">example@gmail.com</string>
    <string name="phoneNumberString">111-111-1111</string>
    <string name="addressString">148 Example Dr. 11111 Charleston, SC</string>
    <string name="editProfileString">Edit Profile</string>
    <string name="usernameTextView">Username:</string>
    <string name="addressTextView">Address:</string>
    <string name="phone_numberTextView">Phone Number:</string>
    <string name="emailTextView">Email:</string>
    <string name="birthdayTextView">Birthday:</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="genderTextView">Gender:</string>
    <string name="menu_sponsor">Sponsor</string>
    <string name="menu_store">Store</string>
    <string name="menu_settings">Settings</string>
    <string name="settings">This is the settings page</string>
    <string name="points">0</string>
    <string name="pointsText">Points:</string>
    <string name="logout">Logout</string>
    <string name="_30">30</string>
    <string name="age_30">Age: 30</string>
    <string name="register">Register</string>
    <string name="age">Age:</string>
    <string name="passwordTextView">Password:</string>
    <string name="password">password</string>

    <string-array name="genderOptions">
        <item>M</item>
        <item>F</item>
        <item>O</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="storeName">Item</string>
    <string name="title_activity_store">StoreActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="menu_categories">Categories</string>
    <string name="storePrice">0</string>
    <string name="i_can_drive">I can drive</string>
</resources>