<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/editProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="40sp"
        android:text="@string/edit_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/usernameTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/usernameTextView"
        app:layout_constraintTop_toBottomOf="@id/editProfile"
        app:layout_constraintBottom_toTopOf="@id/addressTextView"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="15sp"
        android:text="@string/addressTextView"
        app:layout_constraintTop_toBottomOf="@id/usernameTextView"
        app:layout_constraintBottom_toTopOf="@id/phoneNumberTextView"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/phoneNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/phone_numberTextView"
        app:layout_constraintTop_toBottomOf="@id/addressTextView"
        app:layout_constraintBottom_toTopOf="@id/ageTextView"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <!-- >
    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/emailTextView"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberTextView"
        app:layout_constraintBottom_toTopOf="@id/ageTextView"
        app:layout_constraintLeft_toLeftOf="parent"/>
        -->

    <TextView
        android:id="@+id/ageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="Age: "
        app:layout_constraintTop_toBottomOf="@id/phoneNumberTextView"
        app:layout_constraintBottom_toTopOf="@id/genderTextView"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/genderTextView"
        app:layout_constraintTop_toBottomOf="@id/ageTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:hint="@string/usernameString"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@id/usernameTextView"
        app:layout_constraintLeft_toRightOf="@id/usernameTextView"/>

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="15sp"
        android:hint="@string/addressString"
        android:inputType="textPostalAddress"
        app:layout_constraintBaseline_toBaselineOf="@id/addressTextView"
        app:layout_constraintLeft_toRightOf="@id/addressTextView"/>

    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:hint="@string/phoneNumberString"
        android:inputType="phone"
        app:layout_constraintBaseline_toBaselineOf="@id/phoneNumberTextView"
        app:layout_constraintLeft_toRightOf="@id/phoneNumberTextView"/>
    <!--
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:hint="@string/emailString"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@id/emailTextView"
        app:layout_constraintLeft_toRightOf="@id/emailTextView"/>
        -->

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:hint="@string/_30"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@id/ageTextView"
        app:layout_constraintLeft_toRightOf="@id/ageTextView"/>

    <Spinner
        android:id="@+id/genderChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/genderTextView"
        app:layout_constraintLeft_toRightOf="@id/genderTextView"/>

</androidx.constraintlayout.widget.ConstraintLayout>